# swagger.yml
@@ -64,6 +64,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
+  /logout:
+    post:
+      operationId: web.controllers.users_controller.handle_logout
+      responses:
+        "200":
+          description: Returns confirmation that session has been deleted and deletes session cookies.
   /my/profile:
     get:
       operationId: web.controllers.users_controller.handle_get_user
